--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -1,7 +1,7 @@
 font:
   normal:
-    family: Terminus
-    style: Bold
+    family: PragmataPro
+    style: Normal
   size: 12
   offset:
     x: 0
